[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DataReserveClient"
version = "0.2.0"
authors = [
  { name = "imgitmen", email = "it.smi@socotec.com" },
]
description = "Python client for Data Reserve"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests>=2.0",
    "pydantic>=2,<3"
]

[project.urls]
Homepage = "https://github.com/imgitmen/DataReserveClient"

[tool.setuptools.packages.find]
where = ["src"]